--- a/NALCalculator/NALCalculator.csproj
+++ b/NALCalculator/NALCalculator.csproj
@@ -131,6 +131,7 @@
     </Compile>
     <Compile Include="ButtonHelper.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="Extensions\BigRational.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -207,9 +208,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BigRationalLibrary">
-      <Version>1.0.0</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.12</Version>
     </PackageReference>
